<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstPage</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="email">Email ID</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="aboutus">About Us</string>
    <string name="title_activity_help">Help</string>
    <string name="help">Help</string>

</resources>
